# bit_apply

./: .coverage  .gitignore  README.md  constants.py  coverage.xml  main.py  pyproject.toml
.github/workflows/: ci.yml
fixtures/vcr_cassettes/: test_post_form_and_get_emails.yaml
tests/: test_main.py
